{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 289,
  "lineage": "d111b915-5e0b-06c7-7e87-108fd304f318",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091dcf4cc33359d2d",
            "arn": "arn:aws:ec2:eu-central-1:562273658236:instance/i-04bbb62fa23c26640",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bbb62fa23c26640",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02a31c3fea5a07a6a"
              }
            ],
            "primary_network_interface_id": "eni-02a31c3fea5a07a6a",
            "private_dns": "ip-10-0-1-107.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "3.124.190.77",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b576b109abd459e6",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0651e562f31b87937"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6651d82a1964cce",
            "tags": {
              "Name": "DB-Instance-1"
            },
            "tags_all": {
              "Name": "DB-Instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0651e562f31b87937"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562273658236",
            "id": "i-04bbb62fa23c26640",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ami_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091dcf4cc33359d2d",
            "arn": "arn:aws:ec2:eu-central-1:562273658236:instance/i-05d16b20aa9f77766",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d16b20aa9f77766",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-056ab4eabbb76f8b2"
              }
            ],
            "primary_network_interface_id": "eni-056ab4eabbb76f8b2",
            "private_dns": "ip-10-0-1-216.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "public_ip": "3.127.108.254",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-003f086b3d4a45997",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0651e562f31b87937"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6651d82a1964cce",
            "tags": {
              "Name": "DB-Instance-2"
            },
            "tags_all": {
              "Name": "DB-Instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0651e562f31b87937"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562273658236",
            "id": "i-05d16b20aa9f77766",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ami_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562273658236:internet-gateway/igw-01249b6649d1a7204",
            "id": "igw-01249b6649d1a7204",
            "owner_id": "562273658236",
            "region": "eu-central-1",
            "tags": {
              "Name": "DB-Replication-Project"
            },
            "tags_all": {
              "Name": "DB-Replication-Project"
            },
            "vpc_id": "vpc-0c5321f8709f96b3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562273658236:route-table/rtb-0795f584c14290caf",
            "id": "rtb-0795f584c14290caf",
            "owner_id": "562273658236",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01249b6649d1a7204",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DB-Replication-Project"
            },
            "tags_all": {
              "Name": "DB-Replication-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5321f8709f96b3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562273658236",
            "id": "rtb-0795f584c14290caf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed00dd841d4d0ab1",
            "region": "eu-central-1",
            "route_table_id": "rtb-0795f584c14290caf",
            "subnet_id": "subnet-0f6651d82a1964cce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562273658236:security-group/sg-0651e562f31b87937",
            "description": "Security group for DB replication instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0651e562f31b87937",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "194.28.6.54/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "562273658236",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-Replication-Project"
            },
            "tags_all": {
              "Name": "DB-Replication-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5321f8709f96b3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562273658236",
            "id": "sg-0651e562f31b87937",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562273658236:subnet/subnet-0f6651d82a1964cce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6651d82a1964cce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562273658236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "DB-Replication-Project"
            },
            "tags_all": {
              "Name": "DB-Replication-Project"
            },
            "vpc_id": "vpc-0c5321f8709f96b3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562273658236",
            "id": "subnet-0f6651d82a1964cce",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562273658236:vpc/vpc-0c5321f8709f96b3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c06f425177a4c1fb",
            "default_route_table_id": "rtb-0cf1b78de94796c90",
            "default_security_group_id": "sg-0df5eb39c6d5a0e08",
            "dhcp_options_id": "dopt-07f0cae871f1874fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5321f8709f96b3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf1b78de94796c90",
            "owner_id": "562273658236",
            "region": "eu-central-1",
            "tags": {
              "Name": "DB-Replication-Project"
            },
            "tags_all": {
              "Name": "DB-Replication-Project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}